[package]
name = "yocto_actor"
version = "0.1.0"
authors = ["Andrey Pushkar <mail@apushkar.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = { path = "custom_derive" }
zmq = { git = "https://github.com/erickt/rust-zmq", features = ["vendored"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[workspace]