[package]
name = "yocto_actor"
version = "0.1.0"
authors = ["Andrey Pushkar <mail@apushkar.me>"]
edition = "2018"
description = "A tiny and extra-simplistic actor model implementation based on ZeroMQ"
keywords = ["actor", "zeromq", "zmq"]
repository = "https://github.com/curldivergence/yocto_actor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_derive = { path = "custom_derive" }
zmq = { git = "https://github.com/erickt/rust-zmq", features = ["vendored"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rand = "0.7"
silly_names = { git = "https://github.com/curldivergence/silly_names.git", branch = "main" }


[workspace]
